# gb-rs

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yml  rust.yml
benches/: my_benchmark.rs
examples/gui/: gui.rs
examples/tui/: tui.rs  widget.rs
roms/: bgbtest.dump  pokemon_red.dump
src/: bus.rs  cart.rs  cpu.rs  gb.rs  gui.rs  interrupts.rs  joypad.rs  lib.rs  main.rs  mbc.rs  oam.rs  ppu.rs  rom.rs  tile.rs  timer.rs  tui.rs  util.rs
src/cart/: mbc1.rs  mbc5.rs  mod.rs
src/ppu/: tile.rs
tests/: blargg.rs  dmg-acid2.rs  mooneye.rs
